src/envoy/front-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.https_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: service_kc
                metadata:
                  filter_metadata:
                    envoy.lua:
                      credentials:
                      - "Basic b2s6dGVzdDE=" # btoa(ok:test1)
                      - "Basic b2s6dGVzdDI=" # btoa(ok:test2)
          http_filters:
           - name: envoy.filters.http.lua
             typed_config:
               "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
               inline_code: |
                 function envoy_on_request(request_handle)
                   for _, credential in pairs(request_handle:metadata():get("credentials")) do
                     if request_handle:headers():get("authorization") == credential then
                       return
                     end
                   end
                   request_handle:respond({[":status"] = "401", ["WWW-Authenticate"] = 'Basic realm="Unknown"'}, "Unauthorized")
                 end
           - name: envoy.router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
              - certificate_chain: { filename: "/etc/confluent/pki/kc-worker.crt" }
                private_key: { filename: "/etc/confluent/pki/kc-worker.key" }
                password: { inline_string: "mypass" }
            validation_context:
              trusted_ca: { filename: /etc/confluent/pki/kc-ca.crt }
  clusters:
  - name: service_kc
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service_kc
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8080
#admin:
#  access_log_path: "/dev/null"
#  address:
#    socket_address:
#      address: 0.0.0.0
#      port_value: 8001
