src/envoy/front-jwt.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.https_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: service_kc
                metadata:
                  filter_metadata:
                    envoy.filters.http.lua:
                      credentials:
                      - "Basic b2s6dGVzdDE=" # btoa(ok:test1)
                      - "Basic b2s6dGVzdDI=" # btoa(ok:test2)
          http_filters:
           - name: envoy.filters.http.jwt_authn
             typed_config:
               "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
               providers:
                  jwt_jwks_provider:
                    issuer: ${issuer}
                    remote_jwks:
                      http_uri:
                        uri: ${keys-uri}
                        cluster: service_jwks
                        timeout: 5s
                      cache_duration:
                        seconds: 300
               rules:
               - match:
                   prefix: /
                 requires:
                   provider_name: jwt_jwks_provider
           - name: envoy.filters.http.router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
              - certificate_chain: { filename: "/etc/confluent/pki/kc-worker.crt" }
                private_key: { filename: "/etc/confluent/pki/kc-worker.key" }
                password: { inline_string: "mypass" }
            validation_context:
              trusted_ca: { filename: /etc/confluent/pki/kc-ca.crt }
  clusters:
  - name: service_kc
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service_kc
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8080

  - name: service_jwks
    connect_timeout: 1s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_jwks
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ${ip-addr}
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls


#admin:
#  access_log_path: "/dev/null"
#  address:
#    socket_address:
#      address: 0.0.0.0
#      port_value: 8001
